--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.4",
     "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
@@ -26,10 +28,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.25.67"
   }
 }
