--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "gutterwizard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
-    "chart.js": "^4.5.0",
-    "lucide-react": "^0.539.0",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-redux": "^9.2.0",
+    "@ant-design/icons": "^6.0.0",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@nextui-org/react": "^2.4.8",
+    "@reduxjs/toolkit": "^2.4.0",
+    "antd": "^5.22.2",
+    "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.18.2",
+    "jodit-react": "^5.2.19",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.512.0",
+    "moment": "^2.30.1",
+    "next": "^15.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
+    "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "recharts": "^3.1.2",
     "redux-persist": "^6.0.0",
-    "sonner": "^2.0.7"
+    "sonner": "^1.7.0",
+    "sweetalert2": "^11.22.0",
+    "tailwind-merge": "^2.5.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/chart.js": "^2.9.41",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/redux-persist": "^4.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/recharts": "^1.8.29",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
